--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
   },
+  "resolutions": {
+    "y18n": "^4.0.1"
+  },
   "scripts": {
     "build": "lerna run build",
     "clean": "lerna run clean",
